--- a/IstAlg/environment.tex
+++ b/IstAlg/environment.tex
@@ -99,6 +99,7 @@
 \DeclareMathOperator{\SL}{SL}
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\Hom}{Hom}
+\DeclareMathOperator{\End}{End}
 \DeclareMathOperator{\Aut}{Aut}
 \DeclareMathOperator{\h}{ht}
 \DeclareMathOperator{\coh}{coht}
@@ -106,10 +107,14 @@
 \DeclareMathOperator{\stab}{stab}
 \DeclareMathOperator{\coker}{coker}
 \DeclareMathOperator{\Com}{Com}
+\DeclareMathOperator{\Kom}{Kom}
 \DeclareMathOperator{\Ext}{Ext}
 \DeclareMathOperator{\Tor}{Tor}
 \DeclareMathOperator{\coind}{coInd}
 \DeclareMathOperator{\ind}{Ind}
+\DeclareMathOperator{\cores}{coRes}
+\DeclareMathOperator{\res}{Res}
+\DeclareMathOperator{\Mat}{Mat}
 
 
 \newcommand{\m}{\mathfrak{m}}
@@ -119,6 +124,7 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\D}{\mathcal{D}}
+\newcommand{\Hbb}{\mathbb{H}}
 \newcommand{\A}{\mathbb{A}}
 \newcommand{\F}{\mathbb{F}}
 \newcommand{\Zn}[1]{\Z/#1\Z}
