--- a/IstAlg/IstAlg.tex
+++ b/IstAlg/IstAlg.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt,twoside,openany]{memoir}
+\documentclass[a4paper,10pt,oneside,openany]{memoir}
 
 % pacchetti e definizioni
 \include{environment}
