--- a/IstAlg/environment.tex
+++ b/IstAlg/environment.tex
@@ -17,8 +17,13 @@
 \usepackage{multirow}
 \usepackage{breqn}
 \usepackage{tikz-cd}
+\usepackage{enumerate}  % http://ctan.org/pkg/enumerate
 %\setcounter{secnumdepth}{5}
 \setlength\extrarowheight{3pt}
+
+%\setlrmarginsandblock{2.5cm}{2.5cm}{*}
+%\setulmarginsandblock{2.5cm}{*}{1}
+%\checkandfixthelayout 
 
 \usepackage{hyperref}
 
@@ -31,8 +36,7 @@
 }
 
 
-
-\newtheorem{theorem}{Teorema}[section]
+\newtheorem{theorem}{Teorema}
 \newtheorem*{theorem*}{Teorema}
 \newtheorem{acknowledgement}[theorem]{Acknowledgement}
 \newtheorem{congettura}[theorem]{Congettura}
@@ -52,10 +56,10 @@
 \newtheorem{summary}[theorem]{Riassunto}
 
 \theoremstyle{definition}
-\newtheorem{definition}[theorem]{Definizione}
-\newtheorem{example}[theorem]{Esempio}
-\newtheorem{exercise}{Esercizio}[section]
-\newtheorem{solution}[exercise]{Soluzione}
+\newtheorem*{definition}{Definizione}
+\newtheorem*{example}{Esempio}
+\newtheorem*{exercise}{Esercizio}
+\newtheorem*{solution}{Soluzione}
 \newtheorem*{notazione}{Notazione}
 
 
@@ -148,3 +152,7 @@
 \newcommand{\rest}[2]{\left. #1 \right|_{#2}}
 
 \newcommand{\Gal}[2]{\operatorname{Gal}\left(\faktor{#1}{#2}\right)}
+
+% Gallo's
+\newcommand{\pid}{\textsc{pid}}
+\newcommand{\ufd}{\textsc{ufd}}
