Grammatica e compilato il pdf

--- a/IstAlg/IstAlg.tex
+++ b/IstAlg/IstAlg.tex
@@ -17,7 +17,7 @@
 %\setlength{\parskip}{10pt}
 
 
-\author{Riccardo Zanotto}
+\author{Riccardo Zanotto, Andrea Gallese}
 \title{Appunti del corso\\ Istituzioni di algebra}
 
 \begin{document}
