--- a/IstAlg/commutativa.tex
+++ b/IstAlg/commutativa.tex
@@ -157,7 +157,7 @@
 \end{lemma}
 
 \begin{theorem}
-    Tutte le basi di trascendeza hanno la stessa cardinalità.
+    Tutte le basi di trascendenza hanno la stessa cardinalità.
 \end{theorem}
 
 \begin{corollary}
