--- a/IstAlg/omologica.tex
+++ b/IstAlg/omologica.tex
@@ -93,7 +93,7 @@ Sia ora $G$ un gruppo che agisce sullo spazio $X$; sia $\Gamma$ un gruppo che ag
 	\[ \begin{tikzcd}
 	\prod_{i} F(i)  \rar[shift left = 0.5ex, "T"] \rar[shift right = 0.5ex, "S" below] & \displaystyle\prod_{\varphi\colon i \to j} F(j)_\varphi
 	\end{tikzcd} \]
-	dove otteniamo $ T $ ed $ S $ sfruttando la proprietà universale el prodotto per completare i diagrammi
+	dove otteniamo $ T $ ed $ S $ sfruttando la proprietà universale del prodotto per completare i diagrammi
 	\[ \begin{tikzcd}
 	\prod_{i} F(i) \rar["T", dashed] \dar["\pi_b"] &
 	\displaystyle\prod_{\varphi\colon i \to j} F(j)_\varphi \dar["\pi_{b\varphi}"] \\
@@ -663,7 +663,7 @@ Consideriamo ora $E\subset F$ di Galois con gruppo $\Gamma$; per ogni $E\subset 
 \end{definition}
 
 \begin{proposition}
-    Sia $X^{i,j}$ un complesso doppio con $X^{i,j}=0$ per $i<0$ o $j<0$. Supponiamo inoltre che le rige e le colonne siano esatte, tranne al più in $0$; definiamo $A^j=\ker\de_O^{0,j}$ e $B^i=\ker\de_V^{i,0}$.
+    Sia $X^{i,j}$ un complesso doppio con $X^{i,j}=0$ per $i<0$ o $j<0$. Supponiamo inoltre che le righe e le colonne siano esatte, tranne al più in $0$; definiamo $A^j=\ker\de_O^{0,j}$ e $B^i=\ker\de_V^{i,0}$.
     Siano poi $\alpha:A^\bullet\to T$ e $\beta:B^\bullet\to T$ le inclusioni.
     
     Allora $\alpha,\beta$ sono mappe di complessi e quasi isomorfismi.
