--- a/TdN Analitica B/TdN_analitica.tex
+++ b/TdN Analitica B/TdN_analitica.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,12pt,twoside,openany]{memoir}
 
 % pacchetti e definizioni
-\include{environment}
+\input{../environment.tex}
 
 \chapterstyle{madsen}
 %\chapterstyle{crosshead}
